sticky hover fix on mobile

--- a/public/index.css
+++ b/public/index.css
@@ -2,7 +2,7 @@ canvas {
   background-color: #fff;
 }
 .button-container {
-  margin-top: 50;
+  margin-top: 32;
 }
 .button {
   margin: 10 170 10 170;
